--- a/app/src/main/res/layout/news_main_row.xml
+++ b/app/src/main/res/layout/news_main_row.xml
@@ -108,6 +108,6 @@
             android:textColor="@android:color/white"
             android:gravity="center_vertical"
             android:paddingLeft="8dp"
-            android:paddingRight="8dp" android:textStyle="bold" android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView14" android:textSize="18sp"/>
+            android:paddingRight="8dp" android:textStyle="bold"
+            android:textSize="14sp" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
 </android.support.constraint.ConstraintLayout>
