--- a/app/src/main/res/layout/post_add_expandable_header.xml
+++ b/app/src/main/res/layout/post_add_expandable_header.xml
@@ -32,14 +32,14 @@
             android:id="@+id/post_add_cons"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/expand_imageView">
 
         <EditText
-                android:id="@+id/lokasi_editText4"
+                android:id="@+id/speed_editText"
                 android:layout_width="0dp"
                 android:layout_height="32dp"
                 android:background="@drawable/rounded_white_textview"
@@ -50,21 +50,21 @@
                 android:textColor="@android:color/white"
                 android:textSize="12sp"
                 app:layout_constraintTop_toBottomOf="@+id/textView16"
-                android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView13" android:layout_marginStart="8dp"
-                app:layout_constraintEnd_toEndOf="@+id/lokasi_editText3"/>
+                app:layout_constraintEnd_toEndOf="@+id/iso_editText"/>
         <TextView
                 android:id="@+id/textView16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Speed"
-                android:textColor="@android:color/darker_gray"
+                android:textColor="@color/colorAccent"
                 android:textSize="10sp"
                 app:layout_constraintEnd_toEndOf="@+id/imageView13"
                 app:layout_constraintStart_toStartOf="@+id/imageView13" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/lokasi_editText3" android:textAlignment="center"/>
+                app:layout_constraintTop_toBottomOf="@+id/iso_editText" android:textAlignment="center"/>
         <EditText
-                android:id="@+id/lokasi_editText3"
+                android:id="@+id/iso_editText"
                 android:layout_width="0dp"
                 android:layout_height="32dp"
                 android:background="@drawable/rounded_white_textview"
@@ -74,7 +74,7 @@
                 android:singleLine="true"
                 android:textColor="@android:color/white"
                 android:textSize="12sp"
-                app:layout_constraintEnd_toEndOf="@+id/lokasi_editText2"
+                app:layout_constraintEnd_toEndOf="@+id/diafragma_editText"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/imageView12" android:layout_marginStart="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/textView15"/>
@@ -83,13 +83,13 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="ISO"
-                android:textColor="@android:color/darker_gray"
+                android:textColor="@color/colorAccent"
                 android:textSize="10sp"
                 app:layout_constraintStart_toStartOf="@+id/imageView12"
-                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/lokasi_editText2"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/diafragma_editText"
                 app:layout_constraintEnd_toEndOf="@+id/imageView12" android:textAlignment="center"/>
         <EditText
-                android:id="@+id/lokasi_editText2"
+                android:id="@+id/diafragma_editText"
                 android:layout_width="0dp"
                 android:layout_height="32dp"
                 android:background="@drawable/rounded_white_textview"
@@ -109,7 +109,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Diafragma"
-                android:textColor="@android:color/darker_gray"
+                android:textColor="@color/colorAccent"
                 android:textSize="10sp"
                 android:textAlignment="center"
                 app:layout_constraintTop_toTopOf="parent"
@@ -120,9 +120,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Kamera"
-                android:textColor="@android:color/darker_gray"
+                android:textColor="@color/colorAccent"
                 android:textSize="10sp"
-                android:textAlignment="center" tools:layout_editor_absoluteX="24dp"/>
+                android:textAlignment="center"
+                app:layout_constraintStart_toStartOf="@+id/imageView2"
+                app:layout_constraintEnd_toEndOf="@+id/imageView2"
+                app:layout_constraintTop_toTopOf="parent"/>
 
         <EditText
                 android:id="@+id/kamera_editText"
@@ -145,7 +148,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:text="Lensa"
-                android:textColor="@android:color/darker_gray"
+                android:textColor="@color/colorAccent"
                 android:textSize="10sp"
                 app:layout_constraintStart_toStartOf="@+id/imageView9"
                 app:layout_constraintTop_toBottomOf="@+id/kamera_editText"
@@ -173,15 +176,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="Lokasi"
-                android:textColor="@android:color/darker_gray"
+                android:text="Flash"
+                android:textColor="@color/colorAccent"
                 android:textSize="10sp"
                 app:layout_constraintStart_toStartOf="@+id/imageView10"
                 app:layout_constraintTop_toBottomOf="@+id/lensa_editText"
                 app:layout_constraintEnd_toEndOf="@+id/imageView10" android:textAlignment="center"/>
 
         <EditText
-                android:id="@+id/lokasi_editText"
+                android:id="@+id/flash_editText"
                 android:layout_width="0dp"
                 android:layout_height="32dp"
                 android:background="@drawable/rounded_white_textview"
@@ -205,43 +208,43 @@
                 app:layout_constraintBottom_toBottomOf="@+id/kamera_editText"/>
         <ImageView
                 android:layout_width="32dp"
-                android:layout_height="32dp" app:srcCompat="@drawable/flash"
+                android:layout_height="32dp" app:srcCompat="@drawable/lensa"
                 android:id="@+id/imageView9"
                 app:layout_constraintTop_toTopOf="@+id/lensa_editText"
                 app:layout_constraintBottom_toBottomOf="@+id/lensa_editText"
                 app:layout_constraintStart_toStartOf="@+id/imageView2"/>
         <ImageView
                 android:layout_width="32dp"
-                android:layout_height="32dp" app:srcCompat="@drawable/diafragma"
+                android:layout_height="32dp" app:srcCompat="@drawable/flash"
                 android:id="@+id/imageView10" app:layout_constraintStart_toStartOf="@+id/imageView9"
-                app:layout_constraintTop_toTopOf="@+id/lokasi_editText"
-                app:layout_constraintBottom_toBottomOf="@+id/lokasi_editText"/>
+                app:layout_constraintTop_toTopOf="@+id/flash_editText"
+                app:layout_constraintBottom_toBottomOf="@+id/flash_editText"/>
         <ImageView
                 android:layout_width="32dp"
                 android:layout_height="32dp" app:srcCompat="@drawable/diafragma"
                 android:id="@+id/imageView11"
-                app:layout_constraintTop_toTopOf="@+id/lokasi_editText2"
-                app:layout_constraintBottom_toBottomOf="@+id/lokasi_editText2"
+                app:layout_constraintTop_toTopOf="@+id/diafragma_editText"
+                app:layout_constraintBottom_toBottomOf="@+id/diafragma_editText"
                 app:layout_constraintStart_toEndOf="@+id/divider" android:layout_marginStart="24dp"/>
         <ImageView
                 android:layout_width="32dp"
                 android:layout_height="32dp" app:srcCompat="@drawable/iso"
                 android:id="@+id/imageView12" app:layout_constraintStart_toStartOf="@+id/imageView11"
-                app:layout_constraintTop_toTopOf="@+id/lokasi_editText3"
-                app:layout_constraintBottom_toBottomOf="@+id/lokasi_editText3"/>
+                app:layout_constraintTop_toTopOf="@+id/iso_editText"
+                app:layout_constraintBottom_toBottomOf="@+id/iso_editText"/>
         <ImageView
                 android:layout_width="32dp"
                 android:layout_height="32dp" app:srcCompat="@drawable/speed"
                 android:id="@+id/imageView13" app:layout_constraintStart_toStartOf="@+id/imageView12"
-                app:layout_constraintTop_toTopOf="@+id/lokasi_editText4"
-                app:layout_constraintBottom_toBottomOf="@+id/lokasi_editText4"/>
+                app:layout_constraintTop_toTopOf="@+id/speed_editText"
+                app:layout_constraintBottom_toBottomOf="@+id/speed_editText"/>
         <View
                 android:id="@+id/divider"
                 android:layout_width="1dp"
                 android:layout_height="0dp"
                 android:background="?android:attr/listDivider"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="@+id/lokasi_editText"
+                app:layout_constraintBottom_toBottomOf="@+id/flash_editText"
                 app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp" android:layout_marginTop="8dp"/>
