--- a/app/src/main/res/layout/post_main.xml
+++ b/app/src/main/res/layout/post_main.xml
@@ -12,8 +12,9 @@
             app:layout_constraintTop_toTopOf="@+id/post_main_recyclerView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
+            android:layout_marginTop="8dp" android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/post_main_recyclerView"
