--- a/app/src/main/res/layout/profile_main.xml
+++ b/app/src/main/res/layout/profile_main.xml
@@ -11,9 +11,10 @@
             android:layout_height="wrap_content"
             android:id="@+id/profile_main_progressBar" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     <android.support.design.widget.FloatingActionButton
             android:id="@+id/profile_main_floating_button"
