--- a/app/src/main/res/layout/post_detail.xml
+++ b/app/src/main/res/layout/post_detail.xml
@@ -14,7 +14,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:background="#000000"/>
+            android:background="#000000" android:layout_marginBottom="4dp"/>
 
     <EditText
             android:id="@+id/commentAdd_text"
