--- a/app/src/main/res/layout/profile_edit.xml
+++ b/app/src/main/res/layout/profile_edit.xml
@@ -56,7 +56,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
-            android:layout_marginRight="32dp"
             android:ems="10"
             android:hint="Username"
             android:inputType="textPersonName"
@@ -65,9 +64,8 @@
             app:fontFamily="@font/assistant_bold"
             android:layout_marginStart="32dp"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="32dp"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
+            app:layout_constraintTop_toBottomOf="@+id/textView2" android:singleLine="true"/>
 
     <TextView
             android:text=" About"
@@ -91,7 +89,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
-            android:layout_marginRight="32dp"
             android:ems="10"
             android:hint="Username"
             android:inputType="textPersonName"
@@ -100,9 +97,8 @@
             app:fontFamily="@font/assistant_bold"
             android:layout_marginStart="32dp"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="32dp"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
+            app:layout_constraintTop_toBottomOf="@+id/textView3" android:singleLine="true"/>
     <Button
             android:text="SIgn Out"
             android:layout_width="0dp"
