--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,7 +8,7 @@
 
     <item android:id="@+id/bottom_news"
           android:icon="@drawable/selector_news"
-          android:title="Berita"/>
+          android:title="Update"/>
 
     <item android:id="@+id/bottom_article"
           android:icon="@drawable/selector_article"
