--- a/app/src/main/res/layout/profile_main_bottom.xml
+++ b/app/src/main/res/layout/profile_main_bottom.xml
@@ -11,7 +11,5 @@
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/profile_main_bottom_recycleView"
-            android:layout_marginLeft="6dp" android:layout_marginStart="6dp" android:layout_marginEnd="6dp"
-            android:layout_marginRight="6dp"
-            />
+            android:layout_marginTop="8dp" android:layout_marginStart="4dp" android:layout_marginEnd="4dp"/>
 </android.support.constraint.ConstraintLayout>
