--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -71,7 +71,7 @@
             app:layout_constraintTop_toBottomOf="@+id/button_login"
             android:textColor="@android:color/white"
             android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="24dp"/>
+            android:fontFamily="@font/basic"/>
     <TextView
             android:text="Daftar disini"
             android:layout_width="wrap_content"
@@ -79,6 +79,6 @@
             android:id="@+id/daftar_textView"
             android:textColor="#00FF90"
             app:layout_constraintTop_toTopOf="@+id/textView4"
-            app:layout_constraintStart_toEndOf="@+id/textView4" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"/>
+            app:layout_constraintStart_toEndOf="@+id/textView4"
+            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="@+id/textView4"/>
 </android.support.constraint.ConstraintLayout>
