--- a/app/src/main/res/layout/event_main_row.xml
+++ b/app/src/main/res/layout/event_main_row.xml
@@ -3,138 +3,76 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
-                                             android:layout_height="wrap_content"
-                                             android:background="#000000">
+                                             android:layout_height="wrap_content">
 
-    <View
-            android:id="@+id/divider2"
-            android:layout_width="1dp"
-            android:layout_height="0dp"
-            android:background="?android:attr/listDivider"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/main_imageView" app:layout_constraintEnd_toEndOf="parent"
+    <android.support.v7.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="85dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"/>
-    <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            app:srcCompat="@drawable/speed"
-            android:id="@+id/imageView15"
-            app:layout_constraintStart_toStartOf="@+id/eventTitle_textView"
-            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/eventTitle_textView"/>
-    <TextView
-            android:text="date"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:id="@+id/pdate_textView"
-            android:textColor="@android:color/darker_gray"
-            app:layout_constraintStart_toEndOf="@+id/imageView15"
-            android:layout_marginStart="8dp"
-            app:layout_constraintTop_toTopOf="@+id/imageView15"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView15"
-            app:layout_constraintVertical_bias="0.0" android:textSize="14sp"/>
-    <ImageView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:srcCompat="@drawable/mainlogin"
-            android:id="@+id/main_imageView"
-            app:layout_constraintStart_toStartOf="parent"
-            android:scaleType="centerCrop"
-            app:layout_constraintEnd_toStartOf="@+id/divider2" app:layout_constraintDimensionRatio="w,1:1"
-            app:layout_constraintHorizontal_bias="1.0"
-            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
-    <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:id="@+id/view3"
-            android:background="#40000000"
-            app:layout_constraintTop_toTopOf="@+id/main_imageView"
-            app:layout_constraintStart_toStartOf="@+id/main_imageView"
-            app:layout_constraintEnd_toEndOf="@+id/main_imageView"
-            app:layout_constraintBottom_toBottomOf="@+id/main_imageView"/>
-    <TextView
-            android:text="title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/eventTitle_textView" app:layout_constraintStart_toEndOf="@+id/main_imageView"
-            android:layout_marginStart="16dp" android:textColor="@android:color/white"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toTopOf="@+id/main_imageView" android:textSize="14sp"
-    />
-    <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            app:srcCompat="@drawable/baseline_favorite_border_white_24dp"
-            android:id="@+id/imageView16"
-            app:layout_constraintStart_toStartOf="@+id/imageView14"
-            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/imageView14"/>
-    <android.support.v7.widget.RecyclerView
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="@+id/imageView16"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView16"
-            app:layout_constraintStart_toEndOf="@+id/imageView16"
-            android:layout_marginStart="8dp"
-            android:id="@+id/newsMain_row_pp_recyclerView"/>
-    <TextView
-            android:text="100"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:id="@+id/textView19"
-            android:gravity="center_vertical"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            app:layout_constraintTop_toTopOf="@+id/newsMain_row_pp_recyclerView"
-            app:layout_constraintBottom_toBottomOf="@+id/newsMain_row_pp_recyclerView"
-            app:layout_constraintStart_toEndOf="@+id/newsMain_row_pp_recyclerView"
-            android:background="@drawable/rounded_button"
-            android:layout_marginStart="8dp"/>
-    <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            app:srcCompat="@drawable/baseline_chat_bubble_outline_white_24dp"
-            android:id="@+id/imageView17"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView16"
-            app:layout_constraintStart_toStartOf="@+id/imageView16"/>
-    <TextView
-            android:text="comment"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:id="@+id/eventMain_comment_textView"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintTop_toTopOf="@+id/imageView17"
-            android:textColor="@android:color/darker_gray" app:layout_constraintBottom_toBottomOf="@+id/imageView17"
-            app:layout_constraintStart_toEndOf="@+id/imageView17" android:layout_marginStart="8dp"/>
-    <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp" app:srcCompat="@drawable/round_location_on_white_24dp"
-            android:id="@+id/imageView14"
-            app:layout_constraintStart_toStartOf="@+id/eventTitle_textView" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView15"/>
-    <TextView
-            android:text="lokasi"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:id="@+id/textView18"
-            app:layout_constraintTop_toTopOf="@+id/imageView14"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView14"
-            app:layout_constraintStart_toEndOf="@+id/imageView14" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:textColor="@android:color/darker_gray" android:textSize="14sp"/>
-    <Button
-            android:text="Save"
-            android:layout_width="0dp"
-            android:layout_height="34dp"
-            android:id="@+id/button2"
-            android:background="@drawable/rounded_white_textview" android:textAllCaps="true"
-            android:textColor="@android:color/white"
-            app:layout_constraintEnd_toEndOf="@+id/view3"
-            app:layout_constraintStart_toStartOf="@+id/view3" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/view3" android:textSize="14sp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_marginStart="8dp" app:cardBackgroundColor="#0A0A0A"
+            app:layout_constraintHorizontal_bias="0.0" android:id="@+id/event_row_card"
+            android:layout_marginBottom="2dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="2dp">
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <View
+                    android:layout_width="85dp"
+                    android:layout_height="85dp"
+                    android:background="@drawable/rounded_five"
+
+                    android:id="@+id/view3" app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/pdate_textView"
+                    android:textColor="@android:color/black"
+                    android:textSize="38sp"
+                    android:gravity="center_horizontal"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/view3"
+                    app:layout_constraintEnd_toEndOf="@+id/view3" android:fontFamily="@font/basic" android:text="33"
+                    android:layout_marginTop="8dp"/>
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/month_textView"
+                    android:textSize="12sp"
+                    app:layout_constraintStart_toStartOf="@+id/pdate_textView"
+                    android:textAllCaps="true"
+                    app:layout_constraintEnd_toEndOf="@+id/pdate_textView" android:layout_marginBottom="16dp"
+                    app:layout_constraintBottom_toBottomOf="parent" android:textColor="@android:color/black"
+                    android:fontFamily="@font/basic"
+                    app:layout_constraintTop_toBottomOf="@+id/pdate_textView"/>
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/eventTitle_textView"
+                    android:textColor="@android:color/white"
+                    android:textSize="14sp"
+                    android:lines="2"
+                    app:layout_constraintStart_toEndOf="@+id/view3" android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:fontFamily="@font/basic"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/pdate_textView" android:layout_marginTop="8dp"/>
+            <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp" app:srcCompat="@drawable/lokasi"
+                    android:id="@+id/imageView14" app:layout_constraintStart_toStartOf="@+id/eventTitle_textView"
+                    app:layout_constraintTop_toTopOf="@+id/lokasi_textView"
+                    app:layout_constraintBottom_toBottomOf="@+id/lokasi_textView" android:adjustViewBounds="true"/>
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/lokasi_textView"
+                    android:textColor="@android:color/darker_gray" android:textSize="12sp"
+                    android:lines="1"
+                    app:layout_constraintStart_toEndOf="@+id/imageView14" android:fontFamily="@font/basic"
+                    app:layout_constraintTop_toBottomOf="@+id/eventTitle_textView" android:layout_marginTop="8dp"/>
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
