--- a/app/src/main/res/layout/post_add_expandable_header.xml
+++ b/app/src/main/res/layout/post_add_expandable_header.xml
@@ -14,10 +14,10 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
             android:gravity="left"
-            android:text="Info Tambahan"
+            android:text="Info (optional)"
             android:textColor="@android:color/white"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" android:fontFamily="@font/basic"/>
 
     <ImageView
             android:id="@+id/expand_imageView"
@@ -52,7 +52,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView16"
                 android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView13" android:layout_marginStart="8dp"
-                app:layout_constraintEnd_toEndOf="@+id/iso_editText"/>
+                app:layout_constraintEnd_toEndOf="@+id/iso_editText" android:fontFamily="@font/basic"/>
         <TextView
                 android:id="@+id/textView16"
                 android:layout_width="wrap_content"
@@ -62,7 +62,8 @@
                 android:textSize="10sp"
                 app:layout_constraintEnd_toEndOf="@+id/imageView13"
                 app:layout_constraintStart_toStartOf="@+id/imageView13" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/iso_editText" android:textAlignment="center"/>
+                app:layout_constraintTop_toBottomOf="@+id/iso_editText" android:textAlignment="center"
+                android:fontFamily="@font/basic"/>
         <EditText
                 android:id="@+id/iso_editText"
                 android:layout_width="0dp"
@@ -77,7 +78,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/diafragma_editText"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/imageView12" android:layout_marginStart="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView15"/>
+                app:layout_constraintTop_toBottomOf="@+id/textView15" android:fontFamily="@font/basic"/>
         <TextView
                 android:id="@+id/textView15"
                 android:layout_width="0dp"
@@ -87,7 +88,8 @@
                 android:textSize="10sp"
                 app:layout_constraintStart_toStartOf="@+id/imageView12"
                 android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/diafragma_editText"
-                app:layout_constraintEnd_toEndOf="@+id/imageView12" android:textAlignment="center"/>
+                app:layout_constraintEnd_toEndOf="@+id/imageView12" android:textAlignment="center"
+                android:fontFamily="@font/basic"/>
         <EditText
                 android:id="@+id/diafragma_editText"
                 android:layout_width="0dp"
@@ -103,7 +105,7 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintTop_toBottomOf="@+id/textView14"
                 app:layout_constraintStart_toEndOf="@+id/imageView11" android:layout_marginStart="8dp"
-                android:layout_marginEnd="32dp"/>
+                android:layout_marginEnd="32dp" android:fontFamily="@font/basic"/>
         <TextView
                 android:id="@+id/textView14"
                 android:layout_width="wrap_content"
@@ -114,18 +116,18 @@
                 android:textAlignment="center"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/imageView11"
-                app:layout_constraintStart_toStartOf="@+id/imageView11"/>
+                app:layout_constraintStart_toStartOf="@+id/imageView11" android:fontFamily="@font/basic"/>
         <TextView
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Kamera"
+                android:text="Camera"
                 android:textColor="@color/colorAccent"
                 android:textSize="10sp"
                 android:textAlignment="center"
                 app:layout_constraintStart_toStartOf="@+id/imageView2"
                 app:layout_constraintEnd_toEndOf="@+id/imageView2"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" android:fontFamily="@font/basic"/>
 
         <EditText
                 android:id="@+id/kamera_editText"
@@ -140,19 +142,20 @@
                 android:textSize="12sp"
                 app:layout_constraintTop_toBottomOf="@+id/textView8"
                 app:layout_constraintStart_toEndOf="@+id/imageView2" android:layout_marginStart="8dp"
-                android:layout_marginEnd="32dp" app:layout_constraintEnd_toStartOf="@+id/divider"/>
+                android:layout_marginEnd="32dp" app:layout_constraintEnd_toStartOf="@+id/divider"
+                android:fontFamily="@font/basic"/>
 
         <TextView
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="Lensa"
+                android:text="Lens"
                 android:textColor="@color/colorAccent"
                 android:textSize="10sp"
                 app:layout_constraintStart_toStartOf="@+id/imageView9"
-                app:layout_constraintTop_toBottomOf="@+id/kamera_editText"
-                app:layout_constraintEnd_toEndOf="@+id/imageView9" android:textAlignment="center"/>
+                app:layout_constraintEnd_toEndOf="@+id/imageView9" android:textAlignment="center"
+                android:fontFamily="@font/basic" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/kamera_editText"/>
 
         <EditText
                 android:id="@+id/lensa_editText"
@@ -169,7 +172,7 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintTop_toBottomOf="@+id/textView9"
                 app:layout_constraintStart_toEndOf="@+id/imageView9" android:layout_marginStart="8dp"
-        />
+                android:fontFamily="@font/basic"/>
 
         <TextView
                 android:id="@+id/textView10"
@@ -181,7 +184,8 @@
                 android:textSize="10sp"
                 app:layout_constraintStart_toStartOf="@+id/imageView10"
                 app:layout_constraintTop_toBottomOf="@+id/lensa_editText"
-                app:layout_constraintEnd_toEndOf="@+id/imageView10" android:textAlignment="center"/>
+                app:layout_constraintEnd_toEndOf="@+id/imageView10" android:textAlignment="center"
+                android:fontFamily="@font/basic"/>
 
         <EditText
                 android:id="@+id/flash_editText"
@@ -198,7 +202,7 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintTop_toBottomOf="@+id/textView10"
                 app:layout_constraintStart_toEndOf="@+id/imageView10" android:layout_marginStart="8dp"
-        />
+                android:fontFamily="@font/basic"/>
         <ImageView
                 android:layout_width="32dp"
                 android:layout_height="32dp" app:srcCompat="@drawable/cameratype"
