--- a/app/src/main/res/layout/post_detail.xml
+++ b/app/src/main/res/layout/post_detail.xml
@@ -24,9 +24,10 @@
             android:layout_marginEnd="8dp"
             android:background="@drawable/rounded_white_textview"
             android:ems="10"
-            android:hint="berikan komentar positif"
+            android:hint="write a positive comment"
             android:inputType="text"
             android:paddingLeft="20dp"
+            android:paddingRight="20dp"
             android:singleLine="true"
             android:textColor="@android:color/white"
             android:textColorHint="@android:color/darker_gray"
@@ -34,7 +35,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/comment_send_button"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" android:fontFamily="@font/basic"/>
 
     <Button
         android:id="@+id/comment_send_button"
