--- a/app/src/main/res/layout/post_detail_comment_title.xml
+++ b/app/src/main/res/layout/post_detail_comment_title.xml
@@ -4,15 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#000000">
+    android:background="#000000
+">
 
     <TextView
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="Komentar"
+            android:text="Comment"
             android:textColor="@android:color/white"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:textSize="18sp"/>
+            app:layout_constraintTop_toTopOf="parent" android:textSize="18sp" android:fontFamily="@font/basic"/>
 </android.support.constraint.ConstraintLayout>
