--- a/app/src/main/res/layout/post_main_row.xml
+++ b/app/src/main/res/layout/post_main_row.xml
@@ -123,7 +123,7 @@
                     android:textSize="10sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/like_counter_textView"
-                    app:layout_constraintTop_toTopOf="@+id/like_counter_textView"/>
+                    app:layout_constraintTop_toTopOf="@+id/like_counter_textView" android:fontFamily="@font/basic"/>
 
             <TextView
                     android:id="@+id/like_counter_textView"
@@ -135,7 +135,7 @@
                     android:textColor="@android:color/darker_gray"
                     android:textSize="10sp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/story_textView"/>
+                    app:layout_constraintTop_toBottomOf="@+id/story_textView" android:fontFamily="@font/basic"/>
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
