--- a/app/src/main/res/layout/profile_edit.xml
+++ b/app/src/main/res/layout/profile_edit.xml
@@ -100,7 +100,7 @@
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintTop_toBottomOf="@+id/textView3" android:singleLine="true"/>
     <Button
-            android:text="SIgn Out"
+            android:text="Sign Out"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/signout_button"
@@ -108,10 +108,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="32dp"
-            android:layout_marginRight="32dp"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="32dp"
             android:layout_marginStart="32dp"
             android:background="@drawable/rounded_button" android:textAllCaps="false"
-            android:textColor="@android:color/white"/>
+            android:textColor="@android:color/black"/>
 </android.support.constraint.ConstraintLayout>
