--- a/app/src/main/res/layout/profile_main_top.xml
+++ b/app/src/main/res/layout/profile_main_top.xml
@@ -54,15 +54,14 @@
                     android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"/>
             <TextView
-                    android:text="user name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/user_textView" android:layout_marginTop="16dp"
                     app:layout_constraintTop_toBottomOf="@+id/profile_imageView"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+                    android:layout_marginStart="8dp"
                     app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                    android:layout_marginRight="8dp" android:textSize="18sp" android:textColor="@android:color/white"/>
+                    android:textSize="18sp" android:textColor="@android:color/white" android:fontFamily="@font/basic"/>
 
             <ImageView
                     android:id="@+id/edit_imageView"
