--- a/app/src/main/res/menu/save_menu.xml
+++ b/app/src/main/res/menu/save_menu.xml
@@ -3,8 +3,9 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <item android:id="@+id/menu_save_profile"
+    <item android:id="@+id/menu_save"
           android:title="Save"
+          android:icon="@drawable/round_done_white_24dp"
           app:showAsAction="ifRoom"/>
 
 </menu>
