--- a/app/src/main/res/layout/event_detail_top.xml
+++ b/app/src/main/res/layout/event_detail_top.xml
@@ -10,8 +10,8 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="2dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="2dp">
+            app:layout_constraintBottom_toBottomOf="parent"
+    >
         <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="225dp" app:srcCompat="@drawable/mainlogin"
