--- a/app/src/main/res/layout/event_main.xml
+++ b/app/src/main/res/layout/event_main.xml
@@ -17,5 +17,7 @@
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:menu="@menu/bottom_nav_menu"
             android:id="@+id/newsMain_bottomNavigation"
-            android:background="#000000" app:labelVisibilityMode="labeled" app:itemTextColor="@android:color/white"/>
+            android:background="#000000"
+            app:labelVisibilityMode="labeled"
+            app:itemTextColor="@android:color/white"/>
 </android.support.constraint.ConstraintLayout>
