--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -71,7 +71,7 @@
             app:layout_constraintTop_toBottomOf="@+id/button_login"
             android:textColor="@android:color/white"
             android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
-            android:fontFamily="@font/basic"/>
+            android:fontFamily="@font/quicksand"/>
     <TextView
             android:text="Daftar disini"
             android:layout_width="wrap_content"
