--- a/app/src/main/res/layout/add_info_detail.xml
+++ b/app/src/main/res/layout/add_info_detail.xml
@@ -17,7 +17,7 @@
             android:textColor="@android:color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" android:textSize="18sp" android:layout_marginTop="8dp"
-            android:fontFamily="@font/basic"/>
+            android:fontFamily="@font/quicksand_bold"/>
 
     <ImageView
             android:id="@+id/addInfo_imageView"
@@ -62,7 +62,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/imageView3"
                 app:layout_constraintEnd_toEndOf="@+id/imageView3" app:layout_constraintHorizontal_bias="0.0"
-                android:textAlignment="center" android:fontFamily="@font/basic"/>
+                android:textAlignment="center" android:fontFamily="@font/quicksand"/>
 
         <TextView
                 android:id="@+id/kamera_textView"
@@ -79,7 +79,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/view2" app:layout_constraintStart_toEndOf="@+id/imageView3"
                 android:layout_marginStart="8dp"
                 app:layout_constraintTop_toTopOf="@+id/imageView3"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView3" android:fontFamily="@font/basic"/>
+                app:layout_constraintBottom_toBottomOf="@+id/imageView3" android:fontFamily="@font/quicksand"/>
 
         <ImageView
                 android:layout_width="32dp"
@@ -99,7 +99,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/imageView3"
                 app:layout_constraintStart_toStartOf="@+id/imageView4"
                 app:layout_constraintEnd_toEndOf="@+id/imageView4" android:textAlignment="center"
-                android:fontFamily="@font/basic"/>
+                android:fontFamily="@font/quicksand"/>
 
         <TextView
                 android:id="@+id/lensa_textView"
@@ -114,7 +114,7 @@
                 android:layout_marginStart="8dp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                 app:layout_constraintTop_toBottomOf="@+id/textView9"
-                app:layout_constraintEnd_toEndOf="@+id/kamera_textView" android:fontFamily="@font/basic"/>
+                app:layout_constraintEnd_toEndOf="@+id/kamera_textView" android:fontFamily="@font/quicksand"/>
 
         <ImageView
                 android:layout_width="32dp"
@@ -134,7 +134,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/imageView4"
                 app:layout_constraintEnd_toEndOf="@+id/imageView5"
                 app:layout_constraintStart_toStartOf="@+id/imageView5" app:layout_constraintHorizontal_bias="0.375"
-                android:fontFamily="@font/basic"/>
+                android:fontFamily="@font/quicksand"/>
 
         <TextView
                 android:id="@+id/flash_textView"
@@ -148,7 +148,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/lensa_textView"
                 app:layout_constraintStart_toEndOf="@+id/imageView5" android:layout_marginStart="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/textView10"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView5" android:fontFamily="@font/basic"/>
+                app:layout_constraintBottom_toBottomOf="@+id/imageView5" android:fontFamily="@font/quicksand"/>
         <ImageView
                 android:layout_width="32dp"
                 android:layout_height="32dp" app:srcCompat="@drawable/diafragma"
@@ -164,7 +164,7 @@
                 android:textSize="10sp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/imageView6"
-                app:layout_constraintEnd_toEndOf="@+id/imageView6" android:fontFamily="@font/basic"/>
+                app:layout_constraintEnd_toEndOf="@+id/imageView6" android:fontFamily="@font/quicksand"/>
         <TextView
                 android:id="@+id/diafragma_textView"
                 android:layout_width="0dp"
@@ -178,7 +178,7 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/imageView6" android:layout_marginStart="8dp"
                 android:layout_marginEnd="32dp" app:layout_constraintTop_toTopOf="@+id/imageView6"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView6" android:fontFamily="@font/basic"/>
+                app:layout_constraintBottom_toBottomOf="@+id/imageView6" android:fontFamily="@font/quicksand"/>
         <ImageView
                 android:layout_width="32dp"
                 android:layout_height="32dp" app:srcCompat="@drawable/iso"
@@ -195,7 +195,7 @@
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/imageView6"
                 app:layout_constraintStart_toStartOf="@+id/imageView7"
-                app:layout_constraintEnd_toEndOf="@+id/imageView7" android:fontFamily="@font/basic"/>
+                app:layout_constraintEnd_toEndOf="@+id/imageView7" android:fontFamily="@font/quicksand"/>
         <TextView
                 android:id="@+id/iso_textView"
                 android:layout_width="0dp"
@@ -210,7 +210,7 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/imageView7" android:layout_marginStart="8dp"
                 app:layout_constraintTop_toTopOf="@+id/imageView7"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView7" android:fontFamily="@font/basic"/>
+                app:layout_constraintBottom_toBottomOf="@+id/imageView7" android:fontFamily="@font/quicksand"/>
         <ImageView
                 android:layout_width="32dp"
                 android:layout_height="32dp" app:srcCompat="@drawable/speed"
@@ -228,12 +228,11 @@
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/imageView7"
                 app:layout_constraintStart_toStartOf="@+id/imageView8"
-                app:layout_constraintEnd_toEndOf="@+id/imageView8" android:fontFamily="@font/basic"/>
+                app:layout_constraintEnd_toEndOf="@+id/imageView8" android:fontFamily="@font/quicksand"/>
         <TextView
                 android:id="@+id/speed_textView"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-
                 android:ems="10"
                 android:gravity="center_vertical"
                 android:singleLine="true"
@@ -243,7 +242,7 @@
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toEndOf="@+id/imageView8" android:layout_marginStart="8dp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView8"
-                app:layout_constraintTop_toTopOf="@+id/imageView8" android:fontFamily="@font/basic"/>
+                app:layout_constraintTop_toTopOf="@+id/imageView8" android:fontFamily="@font/quicksand"/>
 
     </android.support.constraint.ConstraintLayout>
 
