--- a/app/src/main/res/layout/article_detail_content_row.xml
+++ b/app/src/main/res/layout/article_detail_content_row.xml
@@ -20,6 +20,6 @@
                 android:paddingRight="8dp"
                 android:paddingTop="8dp"
                 android:paddingEnd="8dp" android:textSize="12sp" android:textColor="@android:color/black"
-                android:fontFamily="@font/basic"/>
+                android:fontFamily="@font/quicksand"/>
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
