--- a/app/src/main/res/layout/event_detail_content.xml
+++ b/app/src/main/res/layout/event_detail_content.xml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+                                             android:layout_height="wrap_content">
 
+    <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView20" android:layout_marginTop="24dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="24dp" android:fontFamily="@font/quicksand_bold" android:textSize="18sp"
+            android:textColor="@android:color/black" android:text="Event Detail"/>
+    <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/eventDetailDesc_textView" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView20" app:layout_constraintStart_toStartOf="@+id/textView20"
+            app:layout_constraintEnd_toEndOf="@+id/textView20" android:textSize="12sp"
+            android:fontFamily="@font/quicksand_light" android:textColor="@android:color/black"/>
 </android.support.constraint.ConstraintLayout>
