--- a/app/src/main/res/layout/event_detail_info.xml
+++ b/app/src/main/res/layout/event_detail_info.xml
@@ -1,13 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="wrap_content"
+                                             android:background="#20000000">
 
     <TextView
-            android:text="TextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/title_textView" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
+            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent" android:textSize="18sp"
+            android:fontFamily="@font/quicksand_bold" android:textColor="@android:color/black"/>
+    <TextView
+            android:text="Start date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView17" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"/>
+            android:id="@+id/textView18" app:layout_constraintStart_toStartOf="@+id/title_textView"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/title_textView" android:textColor="@android:color/black"
+            android:fontFamily="@font/quicksand"/>
+    <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/sdate_textView" app:layout_constraintStart_toEndOf="@+id/textView18"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@+id/title_textView"
+            android:textColor="@android:color/black"
+            app:layout_constraintTop_toTopOf="@+id/textView18" android:fontFamily="@font/quicksand"/>
+    <TextView
+            android:text="Fee"
+            android:layout_width="71dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView22"
+            android:fontFamily="@font/quicksand" android:textColor="@android:color/black"
+            app:layout_constraintStart_toStartOf="@+id/textView18" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView18" app:layout_constraintEnd_toEndOf="@+id/textView18"/>
+    <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/price_textView"
+            app:layout_constraintTop_toTopOf="@+id/textView22"
+            app:layout_constraintEnd_toEndOf="@+id/sdate_textView" android:fontFamily="@font/quicksand"
+            android:textColor="@android:color/black"
+            app:layout_constraintStart_toStartOf="@+id/sdate_textView"/>
+    <TextView
+            android:text="Location"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView25" app:layout_constraintStart_toStartOf="@+id/textView22"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView22" android:fontFamily="@font/quicksand"
+            android:textColor="@android:color/black" app:layout_constraintEnd_toEndOf="@+id/textView22"/>
+    <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/lok_textView"
+            app:layout_constraintTop_toTopOf="@+id/textView25" app:layout_constraintEnd_toEndOf="@+id/price_textView"
+            android:fontFamily="@font/quicksand"
+            android:textColor="@android:color/black" app:layout_constraintStart_toStartOf="@+id/price_textView"
+            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"/>
 </android.support.constraint.ConstraintLayout>
