--- a/app/src/main/res/layout/mission_detail_prize.xml
+++ b/app/src/main/res/layout/mission_detail_prize.xml
@@ -1,6 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+                                             android:layout_height="wrap_content"
+android:background="#20000000">
 
+    <TextView
+            android:text="Prize"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView21" android:layout_marginTop="24dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="24dp" android:textSize="18sp" android:textColor="@android:color/black"
+            android:fontFamily="@font/quicksand_bold"/>
+    <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/prize_textView" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView21" app:layout_constraintStart_toStartOf="@+id/textView21"
+            app:layout_constraintEnd_toEndOf="@+id/textView21" android:layout_marginBottom="24dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:fontFamily="@font/quicksand_light"
+            android:textSize="12sp"
+            android:textColor="@android:color/black"/>
 </android.support.constraint.ConstraintLayout>
