--- a/app/src/main/res/layout/mission_detail_top.xml
+++ b/app/src/main/res/layout/mission_detail_top.xml
@@ -1,6 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+                                             android:layout_height="wrap_content">
 
+    <ImageView
+            android:layout_width="0dp"
+            android:layout_height="225dp" app:srcCompat="@drawable/mainlogin"
+            android:id="@+id/banner_imageView"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:scaleType="centerCrop"
+    />
+    <View
+            android:layout_width="0dp"
+            android:layout_height="0dp" android:id="@+id/view5"
+            app:layout_constraintTop_toTopOf="@+id/banner_imageView"
+            app:layout_constraintBottom_toBottomOf="@+id/banner_imageView"
+            android:background="#80000000"
+            app:layout_constraintStart_toStartOf="@+id/banner_imageView" app:layout_constraintEnd_toEndOf="@+id/banner_imageView"
+    />
+    <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp" app:srcCompat="@drawable/baseline_person_white_24dp"
+            android:id="@+id/orgPP_imageView" android:layout_marginTop="24dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="24dp"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/org_textView" app:layout_constraintStart_toEndOf="@+id/orgPP_imageView"
+            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/orgPP_imageView"
+            android:fontFamily="@font/quicksand" android:textColor="@android:color/white"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/status_textView" app:layout_constraintStart_toStartOf="@+id/org_textView"
+            app:layout_constraintTop_toBottomOf="@+id/org_textView" android:textSize="12sp"
+            android:textColor="@android:color/white"/>
+    <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/title_textView"
+            app:layout_constraintStart_toStartOf="@+id/view5"
+            app:layout_constraintEnd_toEndOf="@+id/view5"
+            app:layout_constraintBottom_toBottomOf="@+id/view5"
+            android:textSize="18sp"
+            android:textColor="@android:color/white" android:layout_marginBottom="24dp"
+            android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
+            android:fontFamily="@font/quicksand_bold"/>
 </android.support.constraint.ConstraintLayout>
