--- a/app/src/main/res/layout/mission_main_row.xml
+++ b/app/src/main/res/layout/mission_main_row.xml
@@ -9,14 +9,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:id="@+id/missionMain_card">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
             <ImageView
                     android:layout_width="0dp"
-                    android:layout_height="200dp" app:srcCompat="@drawable/mainlogin"
+                    android:layout_height="225dp" app:srcCompat="@drawable/mainlogin"
                     android:id="@+id/missionBanner_imageView"
                     app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -31,46 +31,43 @@
                     app:layout_constraintEnd_toEndOf="@+id/missionBanner_imageView"
                     app:layout_constraintBottom_toBottomOf="@+id/missionBanner_imageView"
                     android:background="#80000000"/>
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp" app:srcCompat="@drawable/baseline_person_white_24dp"
-                    android:id="@+id/imageView16" android:layout_marginTop="16dp"
+                    android:id="@+id/pp_imageView" android:layout_marginTop="16dp"
                     app:layout_constraintTop_toTopOf="@+id/view4" app:layout_constraintStart_toStartOf="@+id/view4"
                     android:layout_marginStart="16dp"/>
             <TextView
-                    android:text="PhotoGigs"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/organizer_textView"
-                    app:layout_constraintTop_toTopOf="@+id/imageView16"
-                    app:layout_constraintStart_toEndOf="@+id/imageView16" android:layout_marginStart="8dp"
-                    android:textColor="@android:color/white" android:textStyle="bold" android:fontFamily="@font/basic"/>
+                    app:layout_constraintTop_toTopOf="@+id/pp_imageView"
+                    app:layout_constraintStart_toEndOf="@+id/pp_imageView" android:layout_marginStart="8dp"
+                    android:textColor="@android:color/white" android:fontFamily="@font/quicksand_bold"/>
             <TextView
-                    android:text="Active"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/status_textView" app:layout_constraintStart_toStartOf="@+id/organizer_textView"
                     android:textSize="12sp"
                     android:textColor="@android:color/white"
-                    app:layout_constraintTop_toBottomOf="@+id/organizer_textView" android:fontFamily="@font/basic"/>
+                    android:fontFamily="@font/quicksand"
+                    app:layout_constraintTop_toBottomOf="@+id/organizer_textView"/>
             <TextView
-                    android:text="PhotoGigs Monthly : Natural Life"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/title_textView" android:textSize="18sp"
-                    app:layout_constraintStart_toStartOf="@+id/imageView16" android:textColor="@android:color/white"
+                    app:layout_constraintStart_toStartOf="@+id/pp_imageView" android:textColor="@android:color/white"
                     android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="@+id/view4"
-                    android:fontFamily="@font/basic" app:layout_constraintHorizontal_bias="0.0"
+                    android:fontFamily="@font/quicksand_bold" app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintBottom_toTopOf="@+id/sub_textView"/>
             <TextView
-                    android:text="Febuary Mission"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/sub_textView" android:layout_marginBottom="16dp"
                     app:layout_constraintBottom_toBottomOf="@+id/view4"
                     app:layout_constraintStart_toStartOf="@+id/title_textView"
-                    app:layout_constraintEnd_toEndOf="@+id/title_textView" android:textSize="12sp"
-                    android:fontFamily="@font/basic" android:textColor="@android:color/white"
+                    app:layout_constraintEnd_toEndOf="@+id/title_textView" android:textSize="14sp"
+                    android:fontFamily="@font/quicksand" android:textColor="@android:color/white"
             />
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
