--- a/app/src/main/res/layout/post_add_expandable_header.xml
+++ b/app/src/main/res/layout/post_add_expandable_header.xml
@@ -17,7 +17,7 @@
             android:text="Info (optional)"
             android:textColor="@android:color/white"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:fontFamily="@font/basic"/>
+            app:layout_constraintTop_toTopOf="parent" android:fontFamily="@font/quicksand_bold"/>
 
     <ImageView
             android:id="@+id/expand_imageView"
@@ -52,7 +52,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView16"
                 android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView13" android:layout_marginStart="8dp"
-                app:layout_constraintEnd_toEndOf="@+id/iso_editText" android:fontFamily="@font/basic"/>
+                app:layout_constraintEnd_toEndOf="@+id/iso_editText" android:fontFamily="@font/quicksand"/>
         <TextView
                 android:id="@+id/textView16"
                 android:layout_width="wrap_content"
@@ -63,7 +63,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/imageView13"
                 app:layout_constraintStart_toStartOf="@+id/imageView13" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/iso_editText" android:textAlignment="center"
-                android:fontFamily="@font/basic"/>
+                android:fontFamily="@font/quicksand"/>
         <EditText
                 android:id="@+id/iso_editText"
                 android:layout_width="0dp"
@@ -78,7 +78,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/diafragma_editText"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/imageView12" android:layout_marginStart="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView15" android:fontFamily="@font/basic"/>
+                app:layout_constraintTop_toBottomOf="@+id/textView15" android:fontFamily="@font/quicksand"/>
         <TextView
                 android:id="@+id/textView15"
                 android:layout_width="0dp"
@@ -89,7 +89,7 @@
                 app:layout_constraintStart_toStartOf="@+id/imageView12"
                 android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/diafragma_editText"
                 app:layout_constraintEnd_toEndOf="@+id/imageView12" android:textAlignment="center"
-                android:fontFamily="@font/basic"/>
+                android:fontFamily="@font/quicksand"/>
         <EditText
                 android:id="@+id/diafragma_editText"
                 android:layout_width="0dp"
@@ -105,7 +105,7 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintTop_toBottomOf="@+id/textView14"
                 app:layout_constraintStart_toEndOf="@+id/imageView11" android:layout_marginStart="8dp"
-                android:layout_marginEnd="32dp" android:fontFamily="@font/basic"/>
+                android:layout_marginEnd="32dp" android:fontFamily="@font/quicksand"/>
         <TextView
                 android:id="@+id/textView14"
                 android:layout_width="wrap_content"
@@ -116,7 +116,7 @@
                 android:textAlignment="center"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/imageView11"
-                app:layout_constraintStart_toStartOf="@+id/imageView11" android:fontFamily="@font/basic"/>
+                app:layout_constraintStart_toStartOf="@+id/imageView11" android:fontFamily="@font/quicksand"/>
         <TextView
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
@@ -127,7 +127,7 @@
                 android:textAlignment="center"
                 app:layout_constraintStart_toStartOf="@+id/imageView2"
                 app:layout_constraintEnd_toEndOf="@+id/imageView2"
-                app:layout_constraintTop_toTopOf="parent" android:fontFamily="@font/basic"/>
+                app:layout_constraintTop_toTopOf="parent" android:fontFamily="@font/quicksand"/>
 
         <EditText
                 android:id="@+id/kamera_editText"
@@ -143,7 +143,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView8"
                 app:layout_constraintStart_toEndOf="@+id/imageView2" android:layout_marginStart="8dp"
                 android:layout_marginEnd="32dp" app:layout_constraintEnd_toStartOf="@+id/divider"
-                android:fontFamily="@font/basic"/>
+                android:fontFamily="@font/quicksand"/>
 
         <TextView
                 android:id="@+id/textView9"
@@ -154,7 +154,7 @@
                 android:textSize="10sp"
                 app:layout_constraintStart_toStartOf="@+id/imageView9"
                 app:layout_constraintEnd_toEndOf="@+id/imageView9" android:textAlignment="center"
-                android:fontFamily="@font/basic" android:layout_marginTop="8dp"
+                android:fontFamily="@font/quicksand" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/kamera_editText"/>
 
         <EditText
@@ -172,7 +172,7 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintTop_toBottomOf="@+id/textView9"
                 app:layout_constraintStart_toEndOf="@+id/imageView9" android:layout_marginStart="8dp"
-                android:fontFamily="@font/basic"/>
+                android:fontFamily="@font/quicksand"/>
 
         <TextView
                 android:id="@+id/textView10"
@@ -185,7 +185,7 @@
                 app:layout_constraintStart_toStartOf="@+id/imageView10"
                 app:layout_constraintTop_toBottomOf="@+id/lensa_editText"
                 app:layout_constraintEnd_toEndOf="@+id/imageView10" android:textAlignment="center"
-                android:fontFamily="@font/basic"/>
+                android:fontFamily="@font/quicksand"/>
 
         <EditText
                 android:id="@+id/flash_editText"
@@ -202,7 +202,7 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintTop_toBottomOf="@+id/textView10"
                 app:layout_constraintStart_toEndOf="@+id/imageView10" android:layout_marginStart="8dp"
-                android:fontFamily="@font/basic"/>
+                android:fontFamily="@font/quicksand"/>
         <ImageView
                 android:layout_width="32dp"
                 android:layout_height="32dp" app:srcCompat="@drawable/cameratype"
