--- a/app/src/main/res/layout/post_main.xml
+++ b/app/src/main/res/layout/post_main.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                              android:layout_height="match_parent"
-                                             android:background="#202020">
+                                             >
 
     <ProgressBar
             style="?android:attr/progressBarStyle"
@@ -20,11 +20,10 @@
             android:id="@+id/post_main_recyclerView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="#202020"
             app:layout_constraintBottom_toTopOf="@+id/post_bottomNavigationView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" android:background="#101010"/>
 
     <android.support.design.widget.FloatingActionButton
             android:layout_width="wrap_content"
