--- a/app/src/main/res/layout/post_main_row.xml
+++ b/app/src/main/res/layout/post_main_row.xml
@@ -4,8 +4,7 @@
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content"
-                                             android:background="#202020
-" android:id="@+id/postMainRow_cons">
+                                             android:id="@+id/postMainRow_cons">
 
 
     <android.support.v7.widget.CardView
@@ -47,7 +46,7 @@
                     android:text="name"
                     android:textColor="@android:color/white"
                     android:textSize="14sp"
-                    app:fontFamily="@font/basic"
+                    app:fontFamily="@font/quicksand"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/profile_pic_imageView"
                     app:layout_constraintTop_toTopOf="@+id/profile_pic_imageView"/>
@@ -63,7 +62,7 @@
                     android:text="date"
                     android:textColor="@android:color/darker_gray"
                     android:textSize="10sp"
-                    app:fontFamily="@font/basic"
+                    app:fontFamily="@font/quicksand_light"
                     app:layout_constraintBottom_toBottomOf="@+id/profile_pic_imageView"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/profile_pic_imageView"/>
@@ -88,7 +87,7 @@
                     android:layout_marginTop="8dp"
                     android:textColor="@android:color/darker_gray"
                     android:textSize="12sp"
-                    app:fontFamily="@font/basic"
+                    app:fontFamily="@font/quicksand"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/comment_imageView" android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"/>
@@ -123,7 +122,7 @@
                     android:textSize="10sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/like_counter_textView"
-                    app:layout_constraintTop_toTopOf="@+id/like_counter_textView" android:fontFamily="@font/basic"/>
+                    app:layout_constraintTop_toTopOf="@+id/like_counter_textView" android:fontFamily="@font/quicksand_light"/>
 
             <TextView
                     android:id="@+id/like_counter_textView"
@@ -135,7 +134,7 @@
                     android:textColor="@android:color/darker_gray"
                     android:textSize="10sp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/story_textView" android:fontFamily="@font/basic"/>
+                    app:layout_constraintTop_toBottomOf="@+id/story_textView" android:fontFamily="@font/quicksand_light"/>
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
