--- a/app/src/main/res/layout/post_main_welcome.xml
+++ b/app/src/main/res/layout/post_main_welcome.xml
@@ -13,7 +13,7 @@
             android:id="@+id/textView12" app:layout_constraintStart_toStartOf="@+id/name_textView"
             app:layout_constraintTop_toBottomOf="@+id/name_textView"
             android:textSize="24sp" android:textColor="@android:color/white" android:textStyle="bold"
-            android:fontFamily="@font/basic"/>
+            android:fontFamily="@font/quicksand_bold"/>
     <TextView
             android:text="name"
             android:layout_width="wrap_content"
@@ -21,7 +21,7 @@
             android:id="@+id/name_textView" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
             android:textColor="@color/colorAccent" android:textSize="18sp" android:textStyle="bold"
-            android:fontFamily="@font/basic"/>
+            android:fontFamily="@font/quicksand"/>
     <TextView
             android:text="date"
             android:layout_width="wrap_content"
@@ -29,5 +29,5 @@
             android:id="@+id/today_tV" app:layout_constraintStart_toStartOf="@+id/textView12"
             app:layout_constraintTop_toBottomOf="@+id/textView12" android:textSize="10sp"
             android:textColor="@android:color/darker_gray" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:fontFamily="@font/basic"/>
+            app:layout_constraintBottom_toBottomOf="parent" android:fontFamily="@font/quicksand_light"/>
 </android.support.constraint.ConstraintLayout>
