--- a/app/src/main/res/layout/profile_edit.xml
+++ b/app/src/main/res/layout/profile_edit.xml
@@ -15,41 +15,30 @@
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"/>
-    <View
-            android:layout_height="100dp"
-            android:id="@+id/view"
-            android:background="#000000"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_width="0dp"/>
 
     <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             app:srcCompat="@drawable/user123"
             android:id="@+id/profile_imageView"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/view"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"/>
 
     <TextView
-            android:text=" User Name"
+            android:text="User Name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/textView2"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="32dp"
             android:layout_marginStart="32dp"
             android:textColor="@android:color/darker_gray"
             android:textSize="12sp"
-            app:fontFamily="@font/assistant"
+            app:fontFamily="@font/quicksand"
             android:layout_marginEnd="32dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginRight="32dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="@+id/view"/>
+            android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/profile_imageView"/>
 
     <EditText
             android:id="@+id/name_textView"
@@ -61,14 +50,14 @@
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             android:textColor="@android:color/white"
-            app:fontFamily="@font/assistant_bold"
+            app:fontFamily="@font/quicksand_bold"
             android:layout_marginStart="32dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintTop_toBottomOf="@+id/textView2" android:singleLine="true"/>
 
     <TextView
-            android:text=" About"
+            android:text="About"
             android:layout_width="0dp"
             android:layout_height="14dp"
             android:id="@+id/textView3"
@@ -77,7 +66,7 @@
             android:layout_marginStart="32dp"
             android:textColor="@android:color/darker_gray"
             android:textSize="12sp"
-            app:fontFamily="@font/assistant"
+            app:fontFamily="@font/quicksand"
             android:layout_marginEnd="32dp"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginRight="32dp"
@@ -94,7 +83,7 @@
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             android:textColor="@android:color/white"
-            app:fontFamily="@font/assistant_bold"
+            app:fontFamily="@font/quicksand"
             android:layout_marginStart="32dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
