--- a/app/src/main/res/layout/profile_main_top.xml
+++ b/app/src/main/res/layout/profile_main_top.xml
@@ -61,7 +61,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="8dp"
                     app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                    android:textSize="18sp" android:textColor="@android:color/white" android:fontFamily="@font/basic"/>
+                    android:textSize="18sp" android:textColor="@android:color/white" android:fontFamily="@font/quicksand_bold"/>
 
             <ImageView
                     android:id="@+id/edit_imageView"
