--- a/app/src/main/res/layout/article_detail_content_row.xml
+++ b/app/src/main/res/layout/article_detail_content_row.xml
@@ -19,7 +19,8 @@
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
                 android:paddingTop="8dp"
-                android:paddingEnd="8dp" android:textSize="12sp" android:textColor="@android:color/black"
-                android:fontFamily="@font/basic"/>
+                android:paddingEnd="8dp" android:textSize="12sp" android:textColor="@android:color/white"
+                android:fontFamily="@font/roboto_light"
+                android:background="#202020"/>
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
