--- a/app/src/main/res/layout/event_main_row.xml
+++ b/app/src/main/res/layout/event_main_row.xml
@@ -10,7 +10,7 @@
             android:layout_height="85dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:cardBackgroundColor="#0A0A0A"
+            android:layout_marginStart="8dp" app:cardBackgroundColor="#404040"
             app:layout_constraintHorizontal_bias="0.0" android:id="@+id/event_row_card"
             android:layout_marginBottom="2dp" app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="2dp">
@@ -34,7 +34,8 @@
                     android:gravity="center_horizontal"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/view3"
-                    app:layout_constraintEnd_toEndOf="@+id/view3" android:fontFamily="@font/basic" android:text="33"
+                    app:layout_constraintEnd_toEndOf="@+id/view3" android:fontFamily="@font/roboto_medium"
+                    android:text="33"
                     android:layout_marginTop="8dp"/>
             <TextView
                     android:layout_width="wrap_content"
@@ -45,7 +46,7 @@
                     android:textAllCaps="true"
                     app:layout_constraintEnd_toEndOf="@+id/pdate_textView" android:layout_marginBottom="16dp"
                     app:layout_constraintBottom_toBottomOf="parent" android:textColor="@android:color/black"
-                    android:fontFamily="@font/basic"
+                    android:fontFamily="@font/roboto"
                     app:layout_constraintTop_toBottomOf="@+id/pdate_textView"/>
             <TextView
                     android:layout_width="0dp"
@@ -56,9 +57,10 @@
                     android:lines="2"
                     app:layout_constraintStart_toEndOf="@+id/view3" android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
-                    android:fontFamily="@font/basic"
+                    android:fontFamily="@font/roboto"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/pdate_textView" android:layout_marginTop="8dp"/>
+                    app:layout_constraintTop_toTopOf="@+id/pdate_textView" android:layout_marginTop="8dp"
+            />
             <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="0dp" app:srcCompat="@drawable/lokasi"
@@ -71,7 +73,7 @@
                     android:id="@+id/lokasi_textView"
                     android:textColor="@android:color/darker_gray" android:textSize="12sp"
                     android:lines="1"
-                    app:layout_constraintStart_toEndOf="@+id/imageView14" android:fontFamily="@font/basic"
+                    app:layout_constraintStart_toEndOf="@+id/imageView14" android:fontFamily="@font/roboto_light"
                     app:layout_constraintTop_toBottomOf="@+id/eventTitle_textView" android:layout_marginTop="8dp"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
