--- a/app/src/main/res/layout/profile_edit.xml
+++ b/app/src/main/res/layout/profile_edit.xml
@@ -41,14 +41,13 @@
             android:layout_height="wrap_content"
             android:id="@+id/textView2"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="32dp"
             android:layout_marginStart="32dp"
             android:textColor="@android:color/darker_gray"
             android:textSize="12sp"
-            app:fontFamily="@font/assistant"
+            app:fontFamily="@font/basic"
             android:layout_marginEnd="32dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginRight="32dp" android:layout_marginTop="8dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="@+id/view"/>
 
     <EditText
@@ -61,7 +60,7 @@
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             android:textColor="@android:color/white"
-            app:fontFamily="@font/assistant_bold"
+            app:fontFamily="@font/basic"
             android:layout_marginStart="32dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -73,14 +72,12 @@
             android:layout_height="14dp"
             android:id="@+id/textView3"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="32dp"
             android:layout_marginStart="32dp"
             android:textColor="@android:color/darker_gray"
             android:textSize="12sp"
-            app:fontFamily="@font/assistant"
+            app:fontFamily="@font/basic"
             android:layout_marginEnd="32dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginRight="32dp"
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/name_textView"/>
 
@@ -94,7 +91,7 @@
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             android:textColor="@android:color/white"
-            app:fontFamily="@font/assistant_bold"
+            app:fontFamily="@font/basic"
             android:layout_marginStart="32dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
