--- a/app/src/main/res/layout/event_main_row.xml
+++ b/app/src/main/res/layout/event_main_row.xml
@@ -46,8 +46,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/textView23" android:fontFamily="@font/quicksand_light"
             android:textColor="@color/colorAccent"
-            app:layout_constraintStart_toStartOf="@+id/imageView16"
-            app:layout_constraintTop_toBottomOf="@+id/sdate_text" android:layout_marginTop="4dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/sdate_text" android:layout_marginTop="4dp"
+            app:layout_constraintStart_toStartOf="@+id/sdate_text"/>
     <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -55,22 +55,16 @@
             android:fontFamily="@font/quicksand_light" android:textColor="@color/colorAccent"
             app:layout_constraintStart_toEndOf="@+id/textView23"
             android:layout_marginStart="8dp"
-            app:layout_constraintTop_toTopOf="@+id/textView23" app:layout_constraintEnd_toEndOf="@+id/sdate_text"
-    />
-    <ImageView
-            android:layout_width="16dp"
-            android:layout_height="16dp" app:srcCompat="@drawable/lokasi"
-            android:id="@+id/imageView16"
-            app:layout_constraintStart_toStartOf="@+id/eventTitle_textView"
-            app:layout_constraintTop_toBottomOf="@+id/textView23" android:layout_marginTop="4dp"/>
+            app:layout_constraintTop_toTopOf="@+id/textView23" app:layout_constraintEnd_toEndOf="@+id/sdate_text"/>
     <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/lokasi_textView"
-            app:layout_constraintStart_toEndOf="@+id/imageView16"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView16" android:fontFamily="@font/quicksand_light"
-            android:textColor="@android:color/white" app:layout_constraintTop_toTopOf="@+id/imageView16"
-            app:layout_constraintEnd_toEndOf="@+id/price_text"/>
+            android:fontFamily="@font/quicksand_light"
+            android:textColor="@android:color/white"
+            app:layout_constraintEnd_toEndOf="@+id/price_text" android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="@+id/textView23"
+            app:layout_constraintTop_toBottomOf="@+id/price_text"/>
     <View
             android:layout_width="0dp"
             android:layout_height="0.5dp"
@@ -79,5 +73,5 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintTop_toBottomOf="@+id/view3"
-            android:layout_marginTop="16dp"/>
+            android:layout_marginTop="8dp"/>
 </android.support.constraint.ConstraintLayout>
