--- a/app/src/main/res/layout/post_detail.xml
+++ b/app/src/main/res/layout/post_detail.xml
@@ -4,7 +4,7 @@
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
-                                             android:background="#000000">
+android:background="#101010">
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView_post_detail"
@@ -14,7 +14,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:background="#000000" android:layout_marginBottom="4dp"/>
+            android:background="#101010" android:layout_marginBottom="4dp"/>
 
     <EditText
             android:id="@+id/commentAdd_text"
@@ -35,7 +35,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/comment_send_button"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent" android:fontFamily="@font/quicksand"/>
+            app:layout_constraintStart_toStartOf="parent" android:fontFamily="@font/quicksand"
+    />
 
     <Button
         android:id="@+id/comment_send_button"
