--- a/app/src/main/res/layout/post_detail_comment_title.xml
+++ b/app/src/main/res/layout/post_detail_comment_title.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#000000
+    android:background="#101010
 ">
 
     <TextView
@@ -15,5 +15,6 @@
             android:text="Comment"
             android:textColor="@android:color/white"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:textSize="18sp" android:fontFamily="@font/quicksand_bold"/>
+            app:layout_constraintTop_toTopOf="parent" android:textSize="18sp" android:fontFamily="@font/quicksand_bold"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
 </android.support.constraint.ConstraintLayout>
