--- a/app/src/main/res/layout/post_main_row.xml
+++ b/app/src/main/res/layout/post_main_row.xml
@@ -4,138 +4,111 @@
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content"
-                                             android:id="@+id/postMainRow_cons">
+                                             android:id="@+id/postMainRow_cons"
+                                             android:background="#000000">
 
 
-    <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
+    <TextView
+            android:id="@+id/date_textView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="12sp"
+            app:fontFamily="@font/quicksand_light"
+            app:layout_constraintBottom_toBottomOf="@+id/profile_pic_imageView"
+            app:layout_constraintEnd_toEndOf="@+id/userName_textView"
+            app:layout_constraintStart_toStartOf="@+id/userName_textView"/>
+    <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_pic_imageView"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@mipmap/ic_launcher_round"/>
+    <TextView
+            android:id="@+id/userName_textView"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            app:cardBackgroundColor="#000000"
-            app:cardCornerRadius="5dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:singleLine="true"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
+            app:fontFamily="@font/quicksand"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/profile_pic_imageView"
+            app:layout_constraintTop_toTopOf="@+id/profile_pic_imageView"/>
+    <ImageView
+            android:id="@+id/post_main_imageView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-        <android.support.constraint.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/profile_pic_imageView"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@mipmap/ic_launcher_round"/>
-
-            <TextView
-                    android:id="@+id/userName_textView"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginRight="8dp"
-                    android:singleLine="true"
-                    android:text="name"
-                    android:textColor="@android:color/white"
-                    android:textSize="14sp"
-                    app:fontFamily="@font/quicksand"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/profile_pic_imageView"
-                    app:layout_constraintTop_toTopOf="@+id/profile_pic_imageView"/>
-
-            <TextView
-                    android:id="@+id/date_textView"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginRight="8dp"
-                    android:text="date"
-                    android:textColor="@android:color/darker_gray"
-                    android:textSize="10sp"
-                    app:fontFamily="@font/quicksand_light"
-                    app:layout_constraintBottom_toBottomOf="@+id/profile_pic_imageView"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/profile_pic_imageView"/>
-
-            <ImageView
-                    android:id="@+id/post_main_imageView"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/profile_pic_imageView"
-                    tools:srcCompat="@drawable/placeholder1"/>
-
-            <TextView
-                    android:id="@+id/story_textView"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:textColor="@android:color/darker_gray"
-                    android:textSize="12sp"
-                    app:fontFamily="@font/quicksand"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/comment_imageView" android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent"/>
-
-            <ImageView
-                    android:id="@+id/like_imageView"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/post_main_imageView"
-                    app:srcCompat="@drawable/baseline_favorite_border_white_24dp"/>
-
-            <ImageView
-                    android:id="@+id/comment_imageView"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_marginStart="16dp"
-                    app:layout_constraintStart_toEndOf="@+id/like_imageView"
-                    app:layout_constraintTop_toTopOf="@+id/like_imageView"
-                    app:srcCompat="@drawable/baseline_chat_bubble_outline_white_24dp"/>
-
-            <TextView
-                    android:id="@+id/comment_counter_textView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginBottom="4dp"
-                    android:text="comment"
-                    android:textColor="@android:color/darker_gray"
-                    android:textSize="10sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/like_counter_textView"
-                    app:layout_constraintTop_toTopOf="@+id/like_counter_textView" android:fontFamily="@font/quicksand_light"/>
-
-            <TextView
-                    android:id="@+id/like_counter_textView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:text="like"
-                    android:textColor="@android:color/darker_gray"
-                    android:textSize="10sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/story_textView" android:fontFamily="@font/quicksand_light"/>
-
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
+            app:layout_constraintTop_toBottomOf="@+id/profile_pic_imageView"
+            tools:srcCompat="@drawable/placeholder1"/>
+    <TextView
+            android:id="@+id/story_textView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="14sp"
+            app:fontFamily="@font/quicksand"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/post_main_imageView"/>
+    <ImageView
+            android:id="@+id/like_imageView"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            app:srcCompat="@drawable/baseline_favorite_border_white_24dp"
+            app:layout_constraintEnd_toStartOf="@+id/view7" android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/story_textView" android:layout_marginTop="8dp"/>
+    <TextView
+            android:id="@+id/like_counter_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="like"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="12sp"
+            android:fontFamily="@font/quicksand_light"
+            app:layout_constraintTop_toBottomOf="@+id/like_imageView"
+            app:layout_constraintEnd_toEndOf="@+id/like_imageView"
+            app:layout_constraintStart_toStartOf="@+id/like_imageView"/>
+    <View
+            android:layout_width="0.2dp"
+            android:layout_height="0dp"
+            android:id="@+id/view7" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp" app:layout_constraintTop_toTopOf="@+id/like_imageView"
+            app:layout_constraintBottom_toBottomOf="@+id/like_counter_textView" android:layout_marginBottom="4dp"
+            android:background="#606060"/>
+    <ImageView
+            android:id="@+id/comment_imageView"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            app:srcCompat="@drawable/baseline_chat_bubble_outline_white_24dp"
+            app:layout_constraintStart_toEndOf="@+id/view7" android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/story_textView" android:layout_marginTop="8dp"/>
+    <TextView
+            android:id="@+id/comment_counter_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="comment"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="12sp"
+            android:fontFamily="@font/quicksand_light"
+            app:layout_constraintTop_toBottomOf="@+id/comment_imageView"
+            app:layout_constraintStart_toStartOf="@+id/comment_imageView"
+            app:layout_constraintEnd_toEndOf="@+id/comment_imageView" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 </android.support.constraint.ConstraintLayout>
