--- a/app/src/main/res/layout/profile_edit.xml
+++ b/app/src/main/res/layout/profile_edit.xml
@@ -38,7 +38,8 @@
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@+id/textView2" android:layout_marginEnd="24dp"
             app:layout_constraintEnd_toEndOf="parent" android:fontFamily="@font/quicksand_bold"
-            android:textColor="@android:color/white" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
+            android:textColor="@android:color/white" app:layout_constraintTop_toBottomOf="@+id/textView2"
+            android:singleLine="true"/>
     <TextView
             android:text="About"
             android:layout_width="wrap_content"
@@ -56,7 +57,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView3"
             app:layout_constraintStart_toStartOf="@+id/textView3"
             app:layout_constraintEnd_toEndOf="@+id/userName_editText" android:fontFamily="@font/quicksand_bold"
-            android:textColor="@android:color/white" android:textSize="14sp"/>
+            android:textColor="@android:color/white" android:textSize="14sp" android:singleLine="true"/>
     <TextView
             android:text="Sign Out"
             android:layout_width="0dp"
