--- a/app/src/main/res/layout/profile_main_top.xml
+++ b/app/src/main/res/layout/profile_main_top.xml
@@ -11,7 +11,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:cardCornerRadius="5dp"
+            app:cardCornerRadius="3dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:clickable="true"
@@ -56,13 +56,21 @@
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/user_textView" android:layout_marginTop="16dp"
-                    app:layout_constraintTop_toBottomOf="@+id/profile_imageView"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                    android:textSize="18sp" android:textColor="@android:color/white" android:fontFamily="@font/quicksand_bold"/>
+                    android:id="@+id/user_textView"
+                    android:textSize="18sp" android:textColor="@android:color/white"
+                    android:fontFamily="@font/quicksand_bold"
+                    app:layout_constraintEnd_toEndOf="@+id/profile_imageView"
+                    app:layout_constraintStart_toStartOf="@+id/profile_imageView"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/profile_imageView"/>
 
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/post_textView"
+                    app:layout_constraintTop_toBottomOf="@+id/user_textView"
+                    app:layout_constraintStart_toStartOf="@+id/user_textView"
+                    app:layout_constraintEnd_toEndOf="@+id/user_textView"
+                    android:fontFamily="@font/quicksand_light" android:textColor="@android:color/white"/>
             <ImageView
                     android:id="@+id/edit_imageView"
                     android:layout_width="24dp"
