--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,7 +12,7 @@
 
     <item android:id="@+id/bottom_article"
           android:icon="@drawable/selector_article"
-          android:title="Mission"/>
+          android:title="Quest"/>
 
     <item android:id="@+id/bottom_profile"
           android:icon="@drawable/selector_profile"
