--- a/app/src/main/res/layout/mission_detail.xml
+++ b/app/src/main/res/layout/mission_detail.xml
@@ -12,10 +12,11 @@
     <android.support.design.widget.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:clickable="true" app:srcCompat="@drawable/send"
+            android:clickable="true"
             android:id="@+id/mission_fab"
             android:layout_marginEnd="32dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="32dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:tint="@color/colorAccent"
-            app:backgroundTint="@android:color/black"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:backgroundTint="@android:color/black" android:src="@android:drawable/ic_input_add"
+            android:tint="@color/colorAccent"/>
 </android.support.constraint.ConstraintLayout>
