--- a/app/src/main/res/layout/mission_detail_top.xml
+++ b/app/src/main/res/layout/mission_detail_top.xml
@@ -33,6 +33,13 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/participant_textView" android:layout_marginBottom="24dp"
+            app:layout_constraintBottom_toBottomOf="@+id/view5"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
+            android:fontFamily="@font/quicksand_bold" android:textColor="@android:color/white" android:textSize="14sp"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/org_textView" app:layout_constraintStart_toEndOf="@+id/orgPP_imageView"
             android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/orgPP_imageView"
             android:fontFamily="@font/quicksand" android:textColor="@android:color/black"/>
