--- a/app/src/main/res/layout/post_add_expandable_header.xml
+++ b/app/src/main/res/layout/post_add_expandable_header.xml
@@ -5,7 +5,7 @@
                                              android:id="@+id/expandable_root"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content"
-                                             android:background="#101010">
+                                             android:background="#282828">
 
     <TextView
             android:id="@+id/expandable_textView"
@@ -42,12 +42,12 @@
                 android:id="@+id/speed_editText"
                 android:layout_width="0dp"
                 android:layout_height="32dp"
-                android:background="@drawable/rounded_white_textview"
+                android:background="@drawable/rounded_white"
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:paddingLeft="20dp"
                 android:singleLine="true"
-                android:textColor="@android:color/white"
+                android:textColor="@android:color/black"
                 android:textSize="12sp"
                 app:layout_constraintTop_toBottomOf="@+id/textView16"
                 android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"
@@ -68,12 +68,12 @@
                 android:id="@+id/iso_editText"
                 android:layout_width="0dp"
                 android:layout_height="32dp"
-                android:background="@drawable/rounded_white_textview"
+                android:background="@drawable/rounded_white"
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:paddingLeft="20dp"
                 android:singleLine="true"
-                android:textColor="@android:color/white"
+                android:textColor="@android:color/black"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="@+id/diafragma_editText"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -94,12 +94,12 @@
                 android:id="@+id/diafragma_editText"
                 android:layout_width="0dp"
                 android:layout_height="32dp"
-                android:background="@drawable/rounded_white_textview"
+                android:background="@drawable/rounded_white"
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:paddingLeft="20dp"
                 android:singleLine="true"
-                android:textColor="@android:color/white"
+                android:textColor="@android:color/black"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -133,12 +133,12 @@
                 android:id="@+id/kamera_editText"
                 android:layout_width="0dp"
                 android:layout_height="32dp"
-                android:background="@drawable/rounded_white_textview"
+                android:background="@drawable/rounded_white"
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:paddingLeft="20dp"
                 android:singleLine="true"
-                android:textColor="@android:color/white"
+                android:textColor="@android:color/black"
                 android:textSize="12sp"
                 app:layout_constraintTop_toBottomOf="@+id/textView8"
                 app:layout_constraintStart_toEndOf="@+id/imageView2" android:layout_marginStart="8dp"
@@ -161,12 +161,12 @@
                 android:id="@+id/lensa_editText"
                 android:layout_width="0dp"
                 android:layout_height="32dp"
-                android:background="@drawable/rounded_white_textview"
+                android:background="@drawable/rounded_white"
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:paddingLeft="20dp"
                 android:singleLine="true"
-                android:textColor="@android:color/white"
+                android:textColor="@android:color/black"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="@+id/kamera_editText"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -191,12 +191,12 @@
                 android:id="@+id/flash_editText"
                 android:layout_width="0dp"
                 android:layout_height="32dp"
-                android:background="@drawable/rounded_white_textview"
+                android:background="@drawable/rounded_white"
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:paddingLeft="20dp"
                 android:singleLine="true"
-                android:textColor="@android:color/white"
+                android:textColor="@android:color/black"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="@+id/lensa_editText"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -246,7 +246,6 @@
                 android:id="@+id/divider"
                 android:layout_width="1dp"
                 android:layout_height="0dp"
-                android:background="?android:attr/listDivider"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="@+id/flash_editText"
                 app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toStartOf="parent"
