--- a/app/src/main/res/layout/post_add_top.xml
+++ b/app/src/main/res/layout/post_add_top.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#101010">
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="wrap_content"
+                                             android:background="#282828">
 
     <ImageView
-        android:id="@+id/post_add_top_imageView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/placeholder1" />
+            android:id="@+id/post_add_top_imageView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/placeholder1"/>
 
     <TextView
             android:id="@+id/textView11"
@@ -24,7 +24,7 @@
             android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
             android:text="Caption"
-            android:textColor="@android:color/darker_gray"
+            android:textColor="@color/colorAccent"
             android:textSize="10sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -35,11 +35,11 @@
             android:layout_height="42dp"
             android:layout_marginTop="4dp"
             android:layout_marginBottom="8dp"
-            android:background="@drawable/rounded_white_textview"
+            android:background="@drawable/rounded_white"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:singleLine="true"
-            android:textColor="@android:color/darker_gray"
+            android:textColor="@android:color/black"
             android:textColorHint="@android:color/darker_gray"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
