--- a/app/src/main/res/layout/profile_main_top.xml
+++ b/app/src/main/res/layout/profile_main_top.xml
@@ -15,7 +15,8 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:clickable="true"
-            android:focusable="true" android:id="@+id/cv">
+            android:focusable="true"
+            android:id="@+id/cv">
 
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -71,15 +72,6 @@
                     app:layout_constraintStart_toStartOf="@+id/user_textView"
                     app:layout_constraintEnd_toEndOf="@+id/user_textView"
                     android:fontFamily="@font/quicksand_light" android:textColor="@android:color/white"/>
-            <ImageView
-                    android:id="@+id/edit_imageView"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_marginEnd="16dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/user_textView"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/user_textView"
-                    app:srcCompat="@drawable/outline_edit_white_24dp"/>
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
