--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
             android:layout_marginLeft="24dp"
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
-            android:background="@drawable/rounded_white_textview"
+            android:background="@drawable/rounded_black_textview"
             android:ems="10"
             android:hint="Email"
             android:inputType="textEmailAddress"
@@ -41,7 +41,7 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginTop="8dp"
-            android:background="@drawable/rounded_white_textview"
+            android:background="@drawable/rounded_black_textview"
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
@@ -57,7 +57,7 @@
             android:layout_width="0dp"
             android:layout_height="48dp"
             android:layout_marginTop="32dp"
-            android:background="@drawable/rounded_button"
+            android:background="@drawable/rounded_green"
             android:text="LogIn"
             android:textColor="@android:color/white"
             app:layout_constraintEnd_toEndOf="@+id/textView_pass_login"
