--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -25,7 +25,7 @@
             android:layout_marginLeft="24dp"
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
-            android:background="@drawable/rounded_white_textview"
+            android:background="@drawable/rounded_black_textview"
             android:ems="10"
             android:hint="Username"
             android:inputType="textPersonName"
@@ -43,7 +43,7 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginTop="8dp"
-            android:background="@drawable/rounded_white_textview"
+            android:background="@drawable/rounded_black_textview"
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
@@ -59,7 +59,7 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginTop="8dp"
-            android:background="@drawable/rounded_white_textview"
+            android:background="@drawable/rounded_black_textview"
             android:ems="10"
             android:hint="Email"
             android:inputType="textEmailAddress"
@@ -75,7 +75,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:background="@drawable/rounded_button"
+            android:background="@drawable/rounded_green"
             android:text="DAFTAR"
             android:textColor="@android:color/white"
             app:layout_constraintEnd_toEndOf="@+id/password_register"
