--- a/app/src/main/res/layout/event_detail_content.xml
+++ b/app/src/main/res/layout/event_detail_content.xml
@@ -3,7 +3,8 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
-                                             android:layout_height="wrap_content">
+                                             android:layout_height="wrap_content"
+                                             android:background="#E5E5E5">
 
     <TextView
             android:layout_width="0dp"
@@ -16,8 +17,12 @@
     <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/eventDetailDesc_textView" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView20" app:layout_constraintStart_toStartOf="@+id/textView20"
-            app:layout_constraintEnd_toEndOf="@+id/textView20" android:textSize="12sp"
-            android:fontFamily="@font/quicksand_light" android:textColor="@android:color/black"/>
+            android:id="@+id/eventDetailDesc_textView"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView20"
+            app:layout_constraintStart_toStartOf="@+id/textView20"
+            app:layout_constraintEnd_toEndOf="@+id/textView20"
+            android:textSize="12sp"
+            android:fontFamily="@font/quicksand_light"
+            android:textColor="@android:color/black"/>
 </android.support.constraint.ConstraintLayout>
