--- a/app/src/main/res/layout/event_detail_tlp.xml
+++ b/app/src/main/res/layout/event_detail_tlp.xml
@@ -4,7 +4,7 @@
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content"
-                                             android:background="#20000000">
+                                             android:background="#F4F4F4">
 
     <TextView
             android:text="Contact :"
@@ -14,8 +14,7 @@
             android:fontFamily="@font/quicksand" android:layout_marginTop="24dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="24dp" android:textColor="@android:color/black"
-            android:layout_marginBottom="24dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+    />
     <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -24,4 +23,13 @@
             app:layout_constraintTop_toTopOf="@+id/textView17" android:fontFamily="@font/quicksand"
             android:textColor="@android:color/black"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"/>
+    <Button
+            android:text="Call"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/call_button" app:layout_constraintStart_toStartOf="@+id/textView17"
+            app:layout_constraintEnd_toEndOf="@+id/infos_textView"
+            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/infos_textView"
+            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:backgroundTint="#101010" android:textColor="@color/colorAccent"/>
 </android.support.constraint.ConstraintLayout>
