--- a/app/src/main/res/layout/event_main.xml
+++ b/app/src/main/res/layout/event_main.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+                                             android:layout_height="match_parent"
+                                             android:background="#282828">
 
     <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/newsMain_bottomNavigation"
-            android:background="#101010" android:id="@+id/newsMain_recyclerView">
+            android:id="@+id/newsMain_recyclerView" android:background="#282828" android:layout_marginEnd="8dp">
     </android.support.v7.widget.RecyclerView>
     <android.support.design.widget.BottomNavigationView
             android:layout_width="0dp"
@@ -17,7 +17,7 @@
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:menu="@menu/bottom_nav_menu"
             android:id="@+id/newsMain_bottomNavigation"
-            android:background="#000000"
-            app:labelVisibilityMode="labeled"
+            android:background="#282828"
+            app:labelVisibilityMode="unlabeled"
             app:itemTextColor="@android:color/white"/>
 </android.support.constraint.ConstraintLayout>
