--- a/app/src/main/res/layout/event_main_row.xml
+++ b/app/src/main/res/layout/event_main_row.xml
@@ -4,74 +4,62 @@
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content"
-                                             android:background="#101010" android:id="@+id/event_main_row_cons">
+                                             android:id="@+id/event_main_row_cons">
 
-    <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp" app:srcCompat="@drawable/mainlogin"
-            android:id="@+id/banner_imageView"
-            app:layout_constraintStart_toStartOf="parent"
-            android:scaleType="centerCrop" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="8dp"/>
-    <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:id="@+id/view3"
-            android:background="#40000000"
-            app:layout_constraintTop_toTopOf="@+id/banner_imageView"
-            app:layout_constraintStart_toStartOf="@+id/banner_imageView"
-            app:layout_constraintEnd_toEndOf="@+id/banner_imageView"
-            app:layout_constraintBottom_toBottomOf="@+id/banner_imageView"/>
-    <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/eventTitle_textView" app:layout_constraintStart_toEndOf="@+id/banner_imageView"
-            android:layout_marginStart="8dp"
-            android:lines="2"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:textSize="14sp"
-            android:fontFamily="@font/quicksand_bold" android:textColor="@android:color/white"
-            app:layout_constraintTop_toTopOf="@+id/banner_imageView"/>
-    <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/sdate_text"
-            android:textColor="@android:color/white" android:fontFamily="@font/quicksand_light"
-            app:layout_constraintStart_toStartOf="@+id/eventTitle_textView"
-            app:layout_constraintTop_toBottomOf="@+id/eventTitle_textView"
-            app:layout_constraintEnd_toEndOf="@+id/eventTitle_textView"/>
-    <TextView
-            android:text="Rp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView23" android:fontFamily="@font/quicksand_light"
-            android:textColor="@color/colorAccent"
-            app:layout_constraintTop_toBottomOf="@+id/sdate_text" android:layout_marginTop="4dp"
-            app:layout_constraintStart_toStartOf="@+id/sdate_text"/>
-    <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/price_text"
-            android:fontFamily="@font/quicksand_light" android:textColor="@color/colorAccent"
-            app:layout_constraintStart_toEndOf="@+id/textView23"
-            android:layout_marginStart="8dp"
-            app:layout_constraintTop_toTopOf="@+id/textView23" app:layout_constraintEnd_toEndOf="@+id/sdate_text"/>
-    <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/lokasi_textView"
-            android:fontFamily="@font/quicksand_light"
-            android:textColor="@android:color/white"
-            app:layout_constraintEnd_toEndOf="@+id/price_text" android:textSize="12sp"
-            app:layout_constraintStart_toStartOf="@+id/textView23"
-            app:layout_constraintTop_toBottomOf="@+id/price_text"/>
-    <View
-            android:layout_width="0dp"
-            android:layout_height="0.5dp"
-            android:background="#404040"
-            android:id="@+id/view" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toBottomOf="@+id/view3"
-            android:layout_marginTop="8dp"/>
+    <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="2dp"
+            app:cardCornerRadius="3dp" android:layout_marginStart="8dp">
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="0dp" app:srcCompat="@drawable/mainlogin"
+                    android:id="@+id/banner_imgView"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintDimensionRatio="w,1:1"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+            <View
+                    android:layout_width="2dp"
+                    android:layout_height="50dp"
+                    android:id="@+id/view" app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="20dp"
+                    android:id="@+id/sdate_text"
+                    android:textColor="@android:color/black" android:fontFamily="@font/quicksand"
+                    app:layout_constraintStart_toStartOf="@+id/eventTitle_textView"
+                    app:layout_constraintTop_toBottomOf="@+id/eventTitle_textView"
+                    app:layout_constraintEnd_toEndOf="@+id/eventTitle_textView" android:textSize="12sp"/>
+            <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:id="@+id/view3"
+                    android:background="#40000000"
+                    app:layout_constraintTop_toTopOf="@+id/banner_imgView"
+                    app:layout_constraintStart_toStartOf="@+id/banner_imgView"
+                    app:layout_constraintEnd_toEndOf="@+id/banner_imgView"
+                    app:layout_constraintBottom_toBottomOf="@+id/banner_imgView"/>
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/eventTitle_textView"
+                    android:lines="1"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp" android:textSize="14sp"
+                    android:fontFamily="@font/quicksand_bold" android:textColor="@android:color/black"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/view3"/>
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
