--- a/app/src/main/res/layout/mission_detail.xml
+++ b/app/src/main/res/layout/mission_detail.xml
@@ -5,10 +5,31 @@
 
     <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/missionDetail_recyclerView"/>
+            android:id="@+id/missionDetail_recyclerView"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+    <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true" app:srcCompat="@drawable/round_send_white_24dp"
+            android:id="@+id/oldPost_Fab" app:layout_constraintEnd_toEndOf="@+id/newPost_Fab"
+            app:layout_constraintStart_toStartOf="@+id/newPost_Fab"
+            app:layout_constraintTop_toTopOf="@+id/newPost_Fab"
+            app:layout_constraintBottom_toBottomOf="@+id/newPost_Fab" app:fabSize="mini"
+            app:backgroundTint="#101010" android:tint="@color/colorAccent"/>
+    <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true" app:srcCompat="@drawable/round_image_white_24dp"
+            android:id="@+id/newPost_Fab"
+            app:layout_constraintTop_toTopOf="@+id/mission_fab"
+            app:layout_constraintBottom_toBottomOf="@+id/mission_fab"
+            app:layout_constraintEnd_toEndOf="@+id/mission_fab"
+            app:layout_constraintStart_toStartOf="@+id/mission_fab" app:fabSize="mini"
+            app:backgroundTint="#101010"
+            android:tint="@color/colorAccent"/>
     <android.support.design.widget.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -17,6 +38,33 @@
             android:layout_marginEnd="32dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="32dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:backgroundTint="@android:color/black" android:src="@android:drawable/ic_input_add"
-            android:tint="@color/colorAccent"/>
+            app:backgroundTint="#101010" android:src="@android:drawable/ic_input_add"
+            android:tint="@color/colorAccent" app:fabSize="normal"/>
+    <TextView
+            android:text="submit a new post"
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
+            android:gravity="center_vertical"
+            android:id="@+id/newPost_textView"
+            app:layout_constraintTop_toTopOf="@+id/newPost_Fab"
+            app:layout_constraintBottom_toBottomOf="@+id/newPost_Fab"
+            app:layout_constraintEnd_toStartOf="@+id/mission_fab" android:layout_marginEnd="8dp"
+            android:fontFamily="@font/quicksand"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:background="@drawable/rounded_five" android:textColor="@color/colorAccent"
+    />
+    <TextView
+            android:text="choose from your post"
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
+            android:id="@+id/oldPost_textView"
+            android:gravity="center_vertical"
+            app:layout_constraintTop_toTopOf="@+id/oldPost_Fab"
+            app:layout_constraintBottom_toBottomOf="@+id/oldPost_Fab"
+            app:layout_constraintEnd_toStartOf="@+id/mission_fab" android:layout_marginEnd="8dp"
+            android:fontFamily="@font/quicksand"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:background="@drawable/rounded_five" android:textColor="@color/colorAccent"/>
 </android.support.constraint.ConstraintLayout>
