--- a/app/src/main/res/layout/mission_detail_top.xml
+++ b/app/src/main/res/layout/mission_detail_top.xml
@@ -7,20 +7,19 @@
 
     <ImageView
             android:layout_width="0dp"
-            android:layout_height="225dp" app:srcCompat="@drawable/mainlogin"
-            android:id="@+id/banner_imageView"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_height="225dp" app:srcCompat="@drawable/mainlogin" android:id="@+id/missDetImg_imageView"
+            android:adjustViewBounds="true" android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
-            android:scaleType="centerCrop"
-    />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
     <View
             android:layout_width="0dp"
             android:layout_height="0dp" android:id="@+id/view5"
-            app:layout_constraintTop_toTopOf="@+id/banner_imageView"
-            app:layout_constraintBottom_toBottomOf="@+id/banner_imageView"
-            android:background="#60000000"
-            app:layout_constraintStart_toStartOf="@+id/banner_imageView"
-            app:layout_constraintEnd_toEndOf="@+id/banner_imageView"
+            android:background="#40000000"
+            app:layout_constraintStart_toStartOf="@+id/missDetImg_imageView"
+            app:layout_constraintEnd_toEndOf="@+id/missDetImg_imageView"
+            app:layout_constraintTop_toTopOf="@+id/missDetImg_imageView"
+            app:layout_constraintBottom_toBottomOf="@+id/missDetImg_imageView"
     />
     <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="40dp"
@@ -33,10 +32,11 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/participant_textView" android:layout_marginBottom="24dp"
-            app:layout_constraintBottom_toBottomOf="@+id/view5"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
-            android:fontFamily="@font/quicksand_bold" android:textColor="@android:color/white" android:textSize="14sp"/>
+            android:id="@+id/participant_textView"
+            android:fontFamily="@font/quicksand_bold" android:textColor="@android:color/black" android:textSize="14sp"
+            android:layout_marginEnd="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/org_textView"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -61,5 +61,5 @@
             android:fontFamily="@font/quicksand_bold"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/orgPP_imageView"/>
+            app:layout_constraintTop_toBottomOf="@+id/orgPP_imageView" android:layout_marginBottom="8dp"/>
 </android.support.constraint.ConstraintLayout>
