--- a/app/src/main/res/layout/mission_list.xml
+++ b/app/src/main/res/layout/mission_list.xml
@@ -8,6 +8,6 @@
             android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/missionList_recyclerView"
-            android:background="#101010"/>
+            android:id="@+id/missionList_recyclerView"
+            app:layout_constraintBottom_toBottomOf="parent" android:background="#282828"/>
 </android.support.constraint.ConstraintLayout>
