--- a/app/src/main/res/layout/mission_main.xml
+++ b/app/src/main/res/layout/mission_main.xml
@@ -8,15 +8,15 @@
             android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="#101010" android:id="@+id/missionMain_recyclerView"
+            android:background="#282828" android:id="@+id/missionMain_recyclerView"
             app:layout_constraintBottom_toTopOf="@+id/missionMain_bottomBar"/>
     <android.support.design.widget.BottomNavigationView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:labelVisibilityMode="labeled"
+            app:layout_constraintBottom_toBottomOf="parent" app:labelVisibilityMode="unlabeled"
             android:id="@+id/missionMain_bottomBar" app:menu="@menu/bottom_nav_menu"
             app:itemTextColor="@android:color/white"
-            android:background="#000000"/>
+            android:background="#282828"/>
 </android.support.constraint.ConstraintLayout>
