--- a/app/src/main/res/layout/post_detail.xml
+++ b/app/src/main/res/layout/post_detail.xml
@@ -4,7 +4,7 @@
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
-android:background="#101010">
+android:background="#282828">
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView_post_detail"
@@ -14,7 +14,7 @@ android:background="#101010">
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:background="#101010" android:layout_marginBottom="4dp"/>
+            android:layout_marginBottom="4dp"/>
 
     <EditText
             android:id="@+id/commentAdd_text"
@@ -22,7 +22,7 @@ android:background="#101010">
             android:layout_height="42dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:background="@drawable/rounded_white_textview"
+            android:background="@drawable/rounded_white"
             android:ems="10"
             android:hint="write a positive comment"
             android:inputType="text"
@@ -39,13 +39,13 @@ android:background="#101010">
     />
 
     <Button
-        android:id="@+id/comment_send_button"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginEnd="8dp"
-        android:background="@drawable/send"
-        app:layout_constraintBottom_toBottomOf="@+id/commentAdd_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/commentAdd_text" />
+            android:id="@+id/comment_send_button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/round_send_white_24dp"
+            app:layout_constraintBottom_toBottomOf="@+id/commentAdd_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/commentAdd_text"/>
 
 </android.support.constraint.ConstraintLayout>
