--- a/app/src/main/res/layout/post_detail_comment_title.xml
+++ b/app/src/main/res/layout/post_detail_comment_title.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#101010
-">
+    android:background="#282828">
 
     <TextView
             android:id="@+id/textView7"
