--- a/app/src/main/res/layout/post_main.xml
+++ b/app/src/main/res/layout/post_main.xml
@@ -23,19 +23,19 @@
             app:layout_constraintBottom_toTopOf="@+id/post_bottomNavigationView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:background="#101010"/>
+            app:layout_constraintTop_toTopOf="parent" android:background="#282828"/>
 
     <android.support.design.widget.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
-            app:srcCompat="@drawable/camera_float1"
+            app:srcCompat="@drawable/round_image_white_24dp"
             android:id="@+id/floatingActionButtonPost"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="32dp"
             app:backgroundTint="@android:color/white"
             android:tint="@android:color/black" android:layout_marginBottom="32dp"
-            app:layout_constraintBottom_toTopOf="@+id/post_bottomNavigationView"/>
+            app:layout_constraintBottom_toTopOf="@+id/post_bottomNavigationView" app:fabSize="normal"/>
     <android.support.design.widget.BottomNavigationView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -44,6 +44,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/post_bottomNavigationView"
             app:menu="@menu/bottom_nav_menu"
-            android:background="#000000"
-            app:labelVisibilityMode="labeled" app:itemTextColor="@android:color/white"/>
+            android:background="#282828"
+            app:labelVisibilityMode="unlabeled" app:itemTextColor="@android:color/white"/>
 </android.support.constraint.ConstraintLayout>
